# RustAPI-benchmark

./: .gitignore  README.md  json_bench.rs  routing_bench.rs  run_benchmarks.ps1
.github/workflows/: bench.yml  build-servers.yml  ci.yml
actix_bench_server/: Cargo.toml
actix_bench_server/src/: main.rs
bench_server/: Cargo.toml
bench_server/src/: main.rs
toon_bench/: Cargo.toml
toon_bench/src/: lib.rs
